--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,16 @@
     flex-basis: auto;
 }
 #chat-page .chat-me .am-list-content{
-    padding-right:15px;
+    /* padding-right:15px; */
     text-align: right;
+    padding-top:0;
+    padding-bottom: 0;
 }
+
+#chat-page .chat-me .am-list-content ::after{
+   height: 0;
+}
+
 .stick-footer{
     z-index:10;
     position: absolute;
