--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,12 @@
 #chat-page .chat-me .am-list-content ::after{
    height: 0;
 }
-
+#chat-page .am-grid-icon{
+    display: none;
+}
+#chat-page .am-grid-text{
+    margin-top:0;
+}
 .stick-footer{
     z-index:10;
     position: absolute;
